@@ -1,3 +1,11 @@
+2013-09-10  Alan Modra  <amodra@gmail.com>
+
+	* config/rs6000/predicates.md (add_cint_operand): New.
+	(reg_or_add_cint_operand, small_toc_ref): Use add_cint_operand.
+	* config/rs6000/rs6000.md (largetoc_high_plus): Restrict offset
+	using add_cint_operand.
+	(largetoc_high_plus_aix): Likewise.
+
 2013-09-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/58364
